# CreateUserDataProcessing/index.ts
@@ -1,0 +1,67 @@
+﻿import { Context } from "@azure/functions";
+
+import * as express from "express";
+import * as winston from "winston";
+
+import { DocumentClient as DocumentDBClient } from "documentdb";
+
+import {
+  USER_DATA_PROCESSING_COLLECTION_NAME,
+  UserDataProcessingModel
+} from "io-functions-commons/dist/src/models/user_data_processing";
+
+import * as documentDbUtils from "io-functions-commons/dist/src/utils/documentdb";
+import { getRequiredStringEnv } from "io-functions-commons/dist/src/utils/env";
+import { secureExpressApp } from "io-functions-commons/dist/src/utils/express";
+import { AzureContextTransport } from "io-functions-commons/dist/src/utils/logging";
+import { setAppContext } from "io-functions-commons/dist/src/utils/middlewares/context_middleware";
+
+import createAzureFunctionHandler from "io-functions-express/dist/src/createAzureFunctionsHandler";
+
+import { CreateUserDataProcessing } from "./handler";
+
+const cosmosDbUri = getRequiredStringEnv("CUSTOMCONNSTR_COSMOSDB_URI");
+const cosmosDbKey = getRequiredStringEnv("CUSTOMCONNSTR_COSMOSDB_KEY");
+const cosmosDbName = getRequiredStringEnv("COSMOSDB_NAME");
+
+const documentDbDatabaseUrl = documentDbUtils.getDatabaseUri(cosmosDbName);
+const userDataProcessingsCollectionUrl = documentDbUtils.getCollectionUri(
+  documentDbDatabaseUrl,
+  USER_DATA_PROCESSING_COLLECTION_NAME
+);
+
+const documentClient = new DocumentDBClient(cosmosDbUri, {
+  masterKey: cosmosDbKey
+});
+
+const userDataProcessingModel = new UserDataProcessingModel(
+  documentClient,
+  userDataProcessingsCollectionUrl
+);
+
+// Setup Express
+const app = express();
+secureExpressApp(app);
+
+app.post(
+  "/api/v1/user-data-processing/:fiscalcode",
+  CreateUserDataProcessing(userDataProcessingModel)
+);
+
+const azureFunctionHandler = createAzureFunctionHandler(app);
+
+// tslint:disable-next-line: no-let
+let logger: Context["log"] | undefined;
+const contextTransport = new AzureContextTransport(() => logger, {
+  level: "debug"
+});
+winston.add(contextTransport);
+
+// Binds the express app to an Azure Function handler
+function httpStart(context: Context): void {
+  logger = context.log;
+  setAppContext(app, context);
+  azureFunctionHandler(context);
+}
+
+export default httpStart;
